demo: webkit-scrollbar selector
* Test out the webkit-scrollbar selector to create a custom black/yellow
scrollbar.
* https://developer.mozilla.org/en-US/docs/Web/CSS/::-webkit-scrollbar
* https://webkit.org/blog/363/styling-scrollbars/

* TIL: Doesn't have any support in Firefox :thought_balloon:

--- a/src/responsive-navbar-flexbox/styles.css
+++ b/src/responsive-navbar-flexbox/styles.css
@@ -6,6 +6,8 @@
     --text-secondary: #ececec;
     --bg-primary: #23232e;
     --bg-secondary: #131318;
+    --scrollbar-track: var(--bg-primary);
+    --scrollbar-thumb: #eabd00;
 }
 
 body {
@@ -13,6 +15,18 @@ body {
     background-color:white;
     margin: 0;
     padding: 0;
+}
+
+body::-webkit-scrollbar {
+    width: 0.3rem;
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--scrollbar-track);
+}
+
+body::-webkit-scrollbar-thumb {
+    background: var(--scrollbar-thumb);
 }
 
 main {
