--- a/src/responsive-navbar-flexbox/styles.css
+++ b/src/responsive-navbar-flexbox/styles.css
@@ -37,3 +37,59 @@ main {
     margin-left: 5rem; /* 5rem * 18px = 90px */
     padding: 1rem; /* 1rem * 18px = 18px :) */
 }
+
+.nav {
+    width: 5rem;
+    /* vh (viewport height)
+    A percentage of the full viewport height.
+    100vh resolves to 100% of the current viewport height.
+    */
+    height: 100vh;
+    position: fixed;
+    background-color: var(--bg-primary);
+}
+
+.nav-list {
+    list-style: none;
+    display: flex;
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+}
+
+.nav-item {
+    width: 100%;
+}
+
+.nav-item:last-child {
+    margin-top: auto;
+}
+
+.nav-link {
+    display: flex;
+    align-items: center;
+    height: 5rem;
+    color: var(--text-primary);
+    text-decoration: none;
+}
+
+.nav-link-text {
+    display: none;
+    margin-left: 1rem;
+}
+
+.nav-link svg {
+  width: 2rem;
+  min-width: 2rem;
+  margin: 0 1.5rem;
+}
+
+.nav:hover {
+    width: 16rem;
+}
+
+.nav:hover .nav-link-text{
+    display: block;
+}
