make navbar transition out smoothly

--- a/src/responsive-navbar-flexbox/styles.css
+++ b/src/responsive-navbar-flexbox/styles.css
@@ -47,6 +47,7 @@ main {
     height: 100vh;
     position: fixed;
     background-color: var(--bg-primary);
+    transition: 300ms ease;
 }
 
 .nav-list {
