--- a/src/responsive-navbar-flexbox/styles.css
+++ b/src/responsive-navbar-flexbox/styles.css
@@ -2,12 +2,14 @@
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
     /* css variables */
+    --yellow: #eabd00;
     --text-primary: #b6b6b6;
     --text-secondary: #ececec;
     --bg-primary: #23232e;
     --bg-secondary: #131318;
     --scrollbar-track: var(--bg-primary);
-    --scrollbar-thumb: #eabd00;
+    --scrollbar-thumb: var(--yellow);
+    --transition-speed: 800ms;
 }
 
 body {
@@ -39,12 +41,7 @@ main {
 }
 
 .nav {
-    width: 5rem;
-    /* vh (viewport height)
-    A percentage of the full viewport height.
-    100vh resolves to 100% of the current viewport height.
-    */
-    height: 100vh;
+
     position: fixed;
     background-color: var(--bg-primary);
     transition: 300ms ease;
@@ -74,6 +71,14 @@ main {
     height: 5rem;
     color: var(--text-primary);
     text-decoration: none;
+    filter: grayscale(100%) opacity(0.5);
+    transition: var(--transition-speed);
+}
+
+.nav-link:hover {
+    filter: grayscale(0%) opacity(1);
+    background: var(--bg-secondary);
+    color: var(--text-secondary);
 }
 
 .nav-link-text {
@@ -87,10 +92,85 @@ main {
   margin: 0 1.5rem;
 }
 
-.nav:hover {
-    width: 16rem;
+.svg-inline--fa {
+    color: var(--yellow);
 }
 
-.nav:hover .nav-link-text{
-    display: block;
+.logo {
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+  text-align: center;
+  color: var(--text-secondary);
+  background: var(--bg-secondary);
+  font-size: 1rem;
+  letter-spacing: 0.3ch;
+  width: 100%;
+}
+
+.logo svg {
+  transform: rotate(0deg);
+  transition: var(--transition-speed);
+}
+
+.logo-text
+{
+  display: inline;
+  position: absolute;
+  left: -999px;
+  transition: var(--transition-speed);
+}
+
+.nav:hover .logo svg {
+  transform: rotate(-360deg);
+}
+
+
+@media only screen and (max-width: 600px) {
+    .nav {
+        bottom: 0;
+        width: 100vw;
+        height: 5rem;
+    }
+
+    .logo {
+        display: none;
+    }
+
+    .nav-list {
+        flex-direction: row;
+    }
+
+    .nav-link {
+        justify-content: center;
+    }
+
+    main {
+        margin: 0;
+    }
+}
+
+/* large screens */
+@media only screen and (min-width: 600px) {
+    .nav {
+        width: 5rem;
+        /* vh (viewport height)
+        A percentage of the full viewport height.
+        100vh resolves to 100% of the current viewport height.
+        */
+        height: 100vh;
+        top: 0;
+    }
+
+    .nav:hover {
+        width: 16rem;
+    }
+
+    .nav:hover .nav-link-text {
+        display: inline;
+    }
+
+    .nav:hover .logo-text {
+        left: 4rem;
+    }
 }
