--- a/src/base.css
+++ b/src/base.css
@@ -1,4 +1,5 @@
 body {
+  --yellow: #eabd00;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
     sans-serif;
   line-height: 1.6;
