--- a/src/progress-bar/styles.css
+++ b/src/progress-bar/styles.css
@@ -4,6 +4,11 @@
   position: fixed;
   height: 1rem;
   display: flex;
-  background-color: grey;
+  background-color: rgb(161, 160, 160);
   width: 100%;
+}
+
+.progress-bar {
+  background-color: var(--yellow);
+  transition: 100ms ease;
 }
